// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLoader > Arrow should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-FEMpB exISgp loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Brackets should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-gjcoXW cMuUdb loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Circle should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-dVBluf hkjZrh loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Dots should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-fLDLck iusQIv loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Filler should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-dycHyt eKejwz loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Linear should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-jbAkgO eotAAL loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Pulse should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-gNZgCX kluzGz loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Rotation should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-kfeOyU kakFqR loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Square should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-hRDKVd fVdXDB loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;
